--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: ruby
 rvm:
     - 2.2.0
+before_script:
+    - cp config/databse.yml.travis config/database.yml
+    - psql -c 'create database travis_ci_test;' -U postgres
