Let's try a migration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ rvm:
 before_script:
     - cp config/database.yml.travis config/database.yml
     - psql -c 'create database travis_ci_test;' -U postgres
+    - rake db:migrate 
