--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ rvm:
 before_script:
     - cp config/database.yml.travis config/database.yml
     - psql -c 'create database travis_ci_test;' -U postgres
-    - rake db:migrate 
+
+script:
+    - bundle exec rake db:test:prepare
+    - bundle exec rake 
