--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,4 @@ rvm:
 before_script:
     - cp config/database.yml.travis config/database.yml
     - psql -c 'create database travis_ci_test;' -U postgres
-
-script:
-    - bundle exec rake db:test:prepare
-    - bundle exec rake 
+    - RAILS_ENV=test bundle exec rake db:migrate
