--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: ruby
 rvm:
     - 2.2.0
+env:
+    - DB=postgres
 before_script:
     - cp config/database.yml.travis config/database.yml
-    - psql -c 'create database travis_ci_test;' -U postgres
-    - RAILS_ENV=test bundle exec rake db:migrate
+    - cat config/database.yml
+    - psql -c 'create database travis_ci_test' -U postgres
+
+script:
+    - RAILS_ENV=test bundle exec rake --trace
