--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: ruby
+cache: bundler
 rvm:
     - 2.2.0
-env:
-    - DB=postgres
+
 before_script:
     - cp config/database.yml.travis config/database.yml
-    - cat config/database.yml
     - psql -c 'create database travis_ci_test' -U postgres
+    - rake db:migrate
 
-script:
-    - RAILS_ENV=test bundle exec rake --trace
+script: bundle exec rake --trace
