load the coveralls:push task. update the travis config to use it

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ before_script:
     - cp config/database.yml.travis config/database.yml
     - psql -c 'create database travis_ci_test' -U postgres
     - rake db:migrate
+
+script:
+    - bundle exec rake
+    - bundle exec rake coveralls:push
