Fix typo of config file, fix environment var in config file

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,8 @@ childlogdir=/var/log/supervisor
 nodaemon=true
 
 [program:rails]
-command = RAILS_ENV=production rails s -b 0.0.0.0
+environment = RAILS_ENV=production
+command = rails s -b 0.0.0.0
 autostart = true
 autorestart = true
 
