The port needs fixing...

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ nodaemon=true
 
 [program:rails]
 environment = RAILS_ENV=production
-command = rails s -b 0.0.0.0
+command = rails s -b 0.0.0.0 -p 80
 autostart = true
 autorestart = true
 
