--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rvm:
 before_script:
     - cp config/database.yml.travis config/database.yml
     - psql -c 'create database travis_ci_test' -U postgres
-    - rake db:migrate
+    - bundle exec rake db:migrate
 
 script:
     - bundle exec rake
