--- a/cron/Dockerfile
+++ b/cron/Dockerfile
@@ -3,7 +3,7 @@ FROM hacsoc/jolly-advisor
 MAINTAINER Matthew Bentley <matthew.t.bentley@gmail.com>
 
 RUN apt-get update && apt-get install -y \
-    postgresql-client cron \
+    cron \
     --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
