Also ignore all scripts and yaml files

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -29,4 +29,7 @@ ratings:
 exclude_paths:
     - "db/**"
     - "features/**"
+    - "script/**"
     - "spec/**"
+    - "**.yml"
+    - "**.yml.travis"
