Lets us run tests inside docker containers

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,12 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
 
+compose: &compose
+    <<: *default
+    username: postgres
+    password:
+    host: db
+
 development:
   <<: *default
   database: the_jolly_advisor_development
@@ -56,7 +62,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  <<: *default
+  <<: *compose
   database: the_jolly_advisor_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
