--- a/config/database.yml
+++ b/config/database.yml
@@ -15,17 +15,14 @@
 # gem 'pg'
 #
 default: &default
+  username: <%= ENV['USER'] || 'postgres' %>
+  password:
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
-
-compose: &compose
-    <<: *default
-    username: postgres
-    password:
-    host: db
+  host: <%= ENV['DB_HOST'] || 'localhost' %>
 
 development:
   <<: *default
@@ -62,7 +59,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  <<: *compose
+  <<: *default
   database: the_jolly_advisor_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
