--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -423,7 +423,7 @@ Style/TrailingCommaInArguments:
   Description: Checks for trailing comma in parameter lists.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-trailing-array-commas
   Enabled: true
-  EnforcedStyleForMultiline: no_comma
+  EnforcedStyleForMultiline: comma
 Style/TrailingCommaInLiteral:
   Description: Checks for trailing comma in literals.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-trailing-array-commas
