Disable EmptyMethod cop in controllers

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -107,6 +107,12 @@ Style/CommentAnnotation:
   - OPTIMIZE
   - HACK
   - REVIEW
+Style/EmptyMethod:
+  Description: ''
+  StyleGuide: ''
+  Enabled: true
+  Exclude:
+  - app/controllers/**
 Layout/DotPosition:
   Description: Checks the position of the dot in multi-line method calls.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#consistent-multi-line-chains
