--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -498,6 +498,7 @@ Metrics/BlockLength:
   Max: 25
   Exclude:
   - spec/**/*.rb
+  - config/routes.rb
 Metrics/BlockNesting:
   Description: Avoid excessive block nesting
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#three-is-the-number-thou-shalt-count
